Mon Feb  8 19:22:27 GMT 1999 Tony Gale  <gale@gtk.org>

	* example/colorsel/*: missing from the CVS for some reason

Mon Feb  8 13:08:51 GMT 1999 Tony Gale  <gale@gtk.org>

	* examples/Makefile: add SpinButton example

Mon Feb  8 12:50:06 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - Heavily edited GtkCombo section initially from
	    Christopher T. Lansdown <lansdoct@screech.cs.alfred.edu>.

	  - Cleanups and some glib stuff from
	    David Wheeler <wheeler@ida.org>

	* Makefile.am: update to include the latest Tutorial examples.

Sat Feb  6 11:20:16 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_idle_draw): Add the
	entire draw_data_list back to the free list, not
	just the last element.

Sat Feb  6 00:21:14 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (draw_row): 
	* gtk/gtkclist.c (draw_row) (new_column_width) (scroll_horizontal)
	(title_focus): search last visible column instead of
	using clist->columns.

Fri Feb  5 13:23:50 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_move_resize): Adjust
	saved positions of children when resizing a 
	guffaw_gravity = TRUE window.

	* gtk/gtkdnd.c (gtk_drag_highlight): Rework the
	 highlighting so that it is done in callbacks for
	 draw and expose. This should solve problems with
         multiple highlights for the same GdkWindow.

	* gtk/gtkdnd.c (gtk_drag_highlight): Fix bug where
	the highlight was being drawn with an incorrect
	width/height for !NO_WINDOW widgets.

Tue Feb  2 11:06:02 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c (gtk_range_style_set): Fixes
	 to account for the changed structure of the windows
	 of range widgets.

1999-02-05  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtk[hv]paned.c (gtk_[hv]paned_size_allocate): 
	Don't assume any more that the gtkwidget.c code
	will queue a redraw on us during a size_allocate -
	queue clear/draws as appropriate for our groove.

1999-02-04  Christopher Blizzard  <blizzard@redhat.com>
