@@ -1,3 +1,12 @@
+Mon Feb  8 21:00:20 1999  Lars Hamann  <lars@gtk.org>
+
+	* gtk/gtkclist.c (CLIST_OPTIMUM_SIZE): changed to 64
+	(gtk_clist_draw_focus) (hadjustment_value_changed) (draw_row):
+ 	few fixes to respect GTK_CAN_FOCUS flag.
+
+	* gtk/gtkctree.c (draw_row): 
+ 	respect GTK_CAN_FOCUS flag.
+
 Mon Feb  8 19:22:27 GMT 1999 Tony Gale  <gale@gtk.org>
 
 	* example/colorsel/*: missing from the CVS for some reason
